Fixed an incompatibility with Classic and an issue with relative paths
...of test and test-suites

--- a/CITA.json5
+++ b/CITA.json5
@@ -10,7 +10,8 @@
             "All": "mbaas@dyalog.com"
         }],
         "TacitVersion": ["commit", "latest"],
-        "SecondsTimeout": 300, // seconds 
+        "SecondsTimeout": 300, // seconds
+        "Editions":"U" 
     },
     Tests: [{
             "Test": "./Tests/DTest.dyalogtest",
