Fixed a bug in Assert;modified tests;added timeout to CITA cfg

--- a/CITA.json5
+++ b/CITA.json5
@@ -5,6 +5,7 @@
 
  ********************************************************************************************/
 {
+    secondstimeout: 900,
     tests: [{
         "DyalogVersions": "18+",
         "Test": "./Tests/DTest.dyalogtest",
